--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 axum = "0.5.16"
 reqwest = "0.11.12"
+rusqlite = { version = "0.28.0", features = ["bundled"] }
 scraper = "0.13.0"
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = { version = "1.0.86", features = ["preserve_order"] }
