--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.5.16"
+fcm = "0.9.2"
 reqwest = "0.11.12"
 rusqlite = { version = "0.28.0", features = ["bundled"] }
 scraper = "0.13.0"
